nginx-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: client1
  policyTypes:
  - Ingress
  # - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
  # egress:
  # - to:
  #   - podSelector:
  #       matchLabels:
  #         app: nginx1
